core/src/test/resources/de/uni_luebeck/isp/tessla/core/errors/annotations/annotations-type-mismatch.tessla
def @foo(a: Int)

@foo("Foo")
in x: Events[Int]
out x